added redirect after registration

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">password: </label>
-                    <input type="text" class="form-control" name="password">
+                    <input type="password" class="form-control" name="password">
                     <br>
                     <input type="submit" value="Log in" class="btn btn-primary">
                 </div>
