--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Login</title>
+    <title>Recipes</title>
 </head>
 <body>
+    <div class="flash_messages">
+        {% with messages = get_flashed_messages() %}     
+        {% if messages %}                            
+            {% for message in messages %}            
+                <p>{{message}}</p>                   
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    </div>
     <div class="container">
         <div class="registration">
             <h1>registration</h1>
-            {% with messages = get_flashed_messages() %}     
-            {% if messages %}                            
-                {% for message in messages %}            
-                    <p>{{message}}</p>                   
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
             <form action="/user/reg" method="POST">
                 <div class="mb-3">
                     <label for="first_name" class="form-label">first name: </label>
@@ -45,13 +47,6 @@
         </div>
         <div class="login">
             <h1>login</h1>
-            {% with messages = get_flashed_messages() %}     
-                {% if messages %}                            
-                    {% for message in messages %}            
-                        <p>{{message}}</p>                   
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
             <form action="/user/login" method="POST">
                 <div class="mb-3">
                     <label for="email" class="form-label">email: </label>
